--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html translate="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Single Page App</title>
+    <title>A Al-Quran SPA</title>
     <link rel="stylesheet" href="core/asset/css/app.css">
 </head>
 <body>
-    <div id='nav'>dfsd</div>
-    <div id='app'>sdf</div>
+    <div class="container mx-auto">
+        <div class="grid grid-cols-3 gap-4">
+            <div class="col-span-1">
+                <div class="space-y-4">
+                    <h1 class="text-2xl font-semibold border-2 p-4  rounded-md">Al-Quran Surah List</h1>
+                    <div id='nav' class=" grid grid-cols-1  overflow-scroll h-[84vh] gap-4 border-2 rounded-md p-4"></div>
+                </div>
+            </div>
+            <div class="col-span-2">
+                <div class="space-y-4">
+                    <h1 class="text-2xl font-bold border-2 p-4  rounded-md text-center">Al-Quran</h1>
+                    <div class=" grid grid-cols-1  overflow-scroll h-[84vh] gap-4 border-2 rounded-md p-4">
+                        <div id="info"></div>
+                        <br>
+                        <hr>
+                        <br>
+                        <div id="content" class="text-4xl space-y-12"></div>
+                        <br>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+            <div class="flex gap-4">
+                <a href="https://github.com/ishafiul" target="_blank"><img class="w-10 hover:scale-110" src="core/asset/img/github.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/ishafiul/" target="_blank"><img class="w-10 hover:scale-110" src="core/asset/img/linkedin.png" alt=""></a>
+            </div>
+        </div>
+    </div>
     <script type="module" src="/core/app.js"></script>
 </body>
 </html>
