home link fixed

--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="col-span-2">
                 <div class="space-y-4">
-                    <h1 class="text-2xl font-bold border-2 p-4  rounded-md text-center">Al-Quran</h1>
+                   <h1 class="text-2xl font-bold border-2 p-4  rounded-md text-center"> <a href="/" data-link>Al-Quran</a></h1>
                     <div class=" grid grid-cols-1  overflow-scroll h-[84vh] gap-4 border-2 rounded-md p-4">
                         <div id="info"></div>
                         <br>
