silly else mistake :P and others

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <title>A Al-Quran SPA</title>
     <link rel="stylesheet" href="core/asset/css/app.css">
 </head>
-<body>
+<body class="">
     <div class="container mx-auto">
         <div class="grid grid-cols-3 gap-4">
             <div class="col-span-1">
@@ -18,7 +18,7 @@
             <div class="col-span-2">
                 <div class="space-y-4">
                    <h1 class="text-2xl font-bold border-2 p-4  rounded-md text-center"> <a href="/" data-link>Al-Quran</a></h1>
-                    <div class=" grid grid-cols-1  overflow-scroll h-[84vh] gap-4 border-2 rounded-md p-4">
+                    <div class=" grid grid-cols-1  overflow-scroll h-[84vh] gap-4 border-2 rounded-md p-4" id="contentholder">
                         <div id="info"></div>
                         <br>
                         <hr>
