--- a/app/index.html
+++ b/app/index.html
@@ -7,29 +7,29 @@
     <link rel="stylesheet" href="core/asset/css/app.css">
 </head>
 <body class="">
-    <div class="container mx-auto">
-        <div class="grid grid-cols-3 gap-4">
-            <div class="col-span-1">
+    <div class="container mx-auto px-4">
+        <div class="grid md:grid-cols-3 grid-cols-1 gap-4">
+            <div class="md:col-span-1 col-span-1">
                 <div class="space-y-4">
-                    <h1 class="text-2xl font-semibold border-2 p-4  rounded-md">Al-Quran Surah List</h1>
-                    <div id='nav' class=" grid grid-cols-1  overflow-scroll h-[84vh] gap-4 border-2 rounded-md p-4"></div>
+                    <h1 class="text-2xl font-semibold border-2 p-4 rounded-md">Al-Quran Surah List</h1>
+                    <div id='nav' class="grid grid-cols-1 overflow-scroll md:h-[84vh] h-[40vh] gap-4 border-2 rounded-md p-4"></div>
                 </div>
             </div>
-            <div class="col-span-2">
+            <div class="md:col-span-2 col-span-1">
                 <div class="space-y-4">
-                   <h1 class="text-2xl font-bold border-2 p-4  rounded-md text-center"> <a href="/" data-link>Al-Quran</a></h1>
-                    <div class=" grid grid-cols-1  overflow-scroll h-[84vh] gap-4 border-2 rounded-md p-4" id="contentholder">
+                   <h1 class="text-2xl font-bold border-2 p-4 rounded-md text-center"> <a href="/" data-link>Al-Quran</a></h1>
+                    <div class="grid grid-cols-1 overflow-scroll md:h-[84vh] h-[40vh] gap-4 border-2 rounded-md p-4" id="contentholder">
                         <div id="info"></div>
                         <br>
                         <hr>
                         <br>
-                        <div id="content" class="text-4xl space-y-12"></div>
+                        <div id="content" class="md:text-4xl text-2xl space-y-12"></div>
                         <br>
                         <hr>
                     </div>
                 </div>
             </div>
-            <div class="flex gap-4">
+            <div class="flex gap-4 mt-4 md:mt-0 justify-center md:justify-start">
                 <a href="https://github.com/ishafiul" target="_blank"><img class="w-10 hover:scale-110" src="core/asset/img/github.png" alt=""></a>
                 <a href="https://www.linkedin.com/in/ishafiul/" target="_blank"><img class="w-10 hover:scale-110" src="core/asset/img/linkedin.png" alt=""></a>
             </div>
